2006-08-28  Andrew Cagney  <cagney@redhat.com>

	* TestCase.java: New file.

2006-03-26  Andrew Cagney  <cagney@redhat.com>

	* Runner.java: Log the progress of each test.

2006-02-05  Andrew Cagney  <cagney@redhat.com>

	* Paths.java: New file.

	* Runner.java: Moved from frysk-imports/frysk/JUnitRunner.java.


Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: